Add project switcher to Daily Dribble and Google Clone pages with styling updates
- Implemented a fixed project switcher in index.html for both Daily Dribble and Google Clone projects.
- Styled the project switcher with CSS for better visibility and user experience.
- Updated the main content structure in index.html for Google Clone to include a search bar, buttons, and footer.
- Enhanced the overall styling in styles.css for both projects to ensure consistency and responsiveness.

--- a/daily-dribble/index.html
+++ b/daily-dribble/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Project Switcher -->
+    <div class="project-switcher">
+        <a href="../" class="switch-link" title="Back to projects">🏠 Projects</a>
+        <span class="divider">|</span>
+        <a href="../google-clone/" class="switch-link" title="View Google Clone">🔍 Google</a>
+    </div>
+
     <h1>THE DAILY DRIBBLE</h1>
     
     <!-- Image credit: Thomas Serer https://unsplash.com/@jesusance -->
