feat: add Web Action Hero project with navigation and styling

--- a/google-clone/index.html
+++ b/google-clone/index.html
@@ -14,6 +14,8 @@
         <a href="../" class="switch-link" title="Back to projects">🏠 Projects</a>
         <span class="divider">|</span>
         <a href="../daily-dribble/" class="switch-link" title="View Daily Dribble">⚽ Daily Dribble</a>
+        <span class="divider">|</span>
+        <a href="../web-action-hero/" class="switch-link" title="View Web Action Hero">🦸‍♂️ Web Action Hero</a>
     </div>
 
     <!-- Header Navigation -->
