--- a/index.html
+++ b/index.html
@@ -189,6 +189,21 @@
                     <span class="tech-badge">Responsive</span>
                 </div>
             </a>
+
+            <a href="web-action-hero/" class="project-card">
+                <div class="project-thumbnail">
+                    <span class="project-icon">🦸‍♂️</span>
+                </div>
+                <h2>Web Action Hero</h2>
+                <p>A stunning hero section for Dave's Devs & Designers featuring an immersive background, gradient overlays, and a compelling call-to-action.</p>
+                <div class="tech-stack">
+                    <span class="tech-badge">HTML5</span>
+                    <span class="tech-badge">CSS3</span>
+                    <span class="tech-badge">Gradients</span>
+                    <span class="tech-badge">Animations</span>
+                    <span class="tech-badge">Responsive</span>
+                </div>
+            </a>
         </div>
 
         <div class="footer">
