--- a/daily-dribble/index.html
+++ b/daily-dribble/index.html
@@ -12,6 +12,8 @@
         <a href="../" class="switch-link" title="Back to projects">🏠 Projects</a>
         <span class="divider">|</span>
         <a href="../google-clone/" class="switch-link" title="View Google Clone">🔍 Google</a>
+        <span class="divider">|</span>
+        <a href="../web-action-hero/" class="switch-link" title="View Web Action Hero">🦸‍♂️ Web Action Hero</a>
     </div>
 
     <h1>THE DAILY DRIBBLE</h1>
