feat: add Birthday GIFt project with interactive elements and animations

--- a/google-clone/index.html
+++ b/google-clone/index.html
@@ -16,6 +16,8 @@
         <a href="../daily-dribble/" class="switch-link" title="View Daily Dribble">⚽ Daily Dribble</a>
         <span class="divider">|</span>
         <a href="../web-action-hero/" class="switch-link" title="View Web Action Hero">🦸‍♂️ Web Action Hero</a>
+        <span class="divider">|</span>
+        <a href="../birthday-gift/" class="switch-link" title="View Birthday GIFt">🎉 Birthday GIFt</a>
     </div>
 
     <!-- Header Navigation -->
