--- a/index.html
+++ b/index.html
@@ -204,6 +204,21 @@
                     <span class="tech-badge">Responsive</span>
                 </div>
             </a>
+
+            <a href="birthday-gift/" class="project-card">
+                <div class="project-thumbnail">
+                    <span class="project-icon">🎉</span>
+                </div>
+                <h2>Birthday GIFt Site</h2>
+                <p>An interactive birthday card with animated GIFs that reveal on hover. Fun, colorful, and built with custom fonts and smooth animations.</p>
+                <div class="tech-stack">
+                    <span class="tech-badge">HTML5</span>
+                    <span class="tech-badge">CSS3</span>
+                    <span class="tech-badge">Google Fonts</span>
+                    <span class="tech-badge">Animations</span>
+                    <span class="tech-badge">Interactive</span>
+                </div>
+            </a>
         </div>
 
         <div class="footer">
