--- a/web-action-hero/index.html
+++ b/web-action-hero/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dave's Devs & Designers</title>
+        <meta name="description" content="Dave's Devs & Designers - We're a group of devs & designers who will help your dream come true.">
+        <title>Dave's Devs & Designers | Web Action Hero</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preload" as="image" href="img/faded-office.png">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦸‍♂️</text></svg>">
     </head>
     <body>
         <!-- Project Switcher -->
@@ -16,6 +19,8 @@
             <a href="../daily-dribble/" class="switch-link">Dribble</a>
             <span class="divider">|</span>
             <a href="./" class="switch-link active">Web Action Hero</a>
+            <span class="divider">|</span>
+            <a href="../birthday-gift/" class="switch-link">Birthday GIFt</a>
         </div>
 
         <header class="header">
