--- a/daily-dribble/index.html
+++ b/daily-dribble/index.html
@@ -14,6 +14,8 @@
         <a href="../google-clone/" class="switch-link" title="View Google Clone">🔍 Google</a>
         <span class="divider">|</span>
         <a href="../web-action-hero/" class="switch-link" title="View Web Action Hero">🦸‍♂️ Web Action Hero</a>
+        <span class="divider">|</span>
+        <a href="../birthday-gift/" class="switch-link" title="View Birthday GIFt">🎉 Birthday GIFt</a>
     </div>
 
     <h1>THE DAILY DRIBBLE</h1>
