feat: add digital business card project with styles and images
- Created a new digital business card project with interactive features.
- Added styles for the business card, including animations and glassmorphism effects.
- Included a profile image for the card.
- Updated project switcher links in multiple HTML files to include the new business card.
- Added a project card for the digital business card in the main index.
- Updated Vite configuration to include the new project.

--- a/404.html
+++ b/404.html
@@ -110,6 +110,7 @@
             <a href="/daily-dribble/" class="link-button">⚽ Daily Dribble</a>
             <a href="/web-action-hero/" class="link-button">🦸‍♂️ Web Action Hero</a>
             <a href="/birthday-gift/" class="link-button">🎉 Birthday GIFt</a>
+            <a href="/business-card/" class="link-button">💼 Business Card</a>
         </div>
     </div>
 </body>
