--- a/birthday-gift/index.html
+++ b/birthday-gift/index.html
@@ -23,6 +23,8 @@
             <a href="../web-action-hero/" class="switch-link">Web Action Hero</a>
             <span class="divider">|</span>
             <a href="./" class="switch-link active">Birthday GIFt</a>
+            <span class="divider">|</span>
+            <a href="../business-card/" class="switch-link">Business Card</a>
         </div>
 
         <div id="header">
