--- a/google-clone/index.html
+++ b/google-clone/index.html
@@ -18,6 +18,10 @@
         <a href="../web-action-hero/" class="switch-link" title="View Web Action Hero">🦸‍♂️ Web Action Hero</a>
         <span class="divider">|</span>
         <a href="../birthday-gift/" class="switch-link" title="View Birthday GIFt">🎉 Birthday GIFt</a>
+        <span class="divider">|</span>
+        <a href="../digital-business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
+        <span class="divider">|</span>
+        <a href="../business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
     </div>
 
     <!-- Header Navigation -->
