--- a/index.html
+++ b/index.html
@@ -219,6 +219,21 @@
                     <span class="tech-badge">Interactive</span>
                 </div>
             </a>
+
+            <a href="digital-business-card/" class="project-card">
+                <div class="project-thumbnail">
+                    <span class="project-icon">💼</span>
+                </div>
+                <h2>Digital Business Card</h2>
+                <p>A modern, interactive business card showcasing skills, location, and contact info with stunning gradients, animations, and glassmorphism effects.</p>
+                <div class="tech-stack">
+                    <span class="tech-badge">HTML5</span>
+                    <span class="tech-badge">CSS3</span>
+                    <span class="tech-badge">Gradients</span>
+                    <span class="tech-badge">Glassmorphism</span>
+                    <span class="tech-badge">Animations</span>
+                </div>
+            </a>
         </div>
 
         <div class="footer">
