--- a/web-action-hero/index.html
+++ b/web-action-hero/index.html
@@ -21,6 +21,10 @@
             <a href="./" class="switch-link active">Web Action Hero</a>
             <span class="divider">|</span>
             <a href="../birthday-gift/" class="switch-link">Birthday GIFt</a>
+        <span class="divider">|</span>
+        <a href="../digital-business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
+            <span class="divider">|</span>
+            <a href="../business-card/" class="switch-link">Business Card</a>
         </div>
 
         <header class="header">
