feat: update project links and add Amazon product page with images and descriptions

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                 </div>
             </a>
 
-            <a href="digital-business-card/" class="project-card">
+            <a href="business-card/" class="project-card">
                 <div class="project-thumbnail">
-                    <span class="project-icon">💼</span>
+                    <img src="developer-workspace.jpg" alt="Developer workspace" class="thumbnail-img">
                 </div>
                 <h2>Digital Business Card</h2>
                 <p>A modern, interactive business card showcasing skills, location, and contact info with stunning gradients, animations, and glassmorphism effects.</p>
@@ -232,6 +232,21 @@
                     <span class="tech-badge">Gradients</span>
                     <span class="tech-badge">Glassmorphism</span>
                     <span class="tech-badge">Animations</span>
+                </div>
+            </a>
+
+            <a href="amazon-product/" class="project-card">
+                <div class="project-thumbnail">
+                    <img src="cat-book.jpg" alt="Cat book" class="thumbnail-img">
+                </div>
+                <h2>Amazon Product Page</h2>
+                <p>A fully-featured product page design with ratings, badges, gradient accents, and modern e-commerce UI patterns for a cat safety book.</p>
+                <div class="tech-stack">
+                    <span class="tech-badge">HTML5</span>
+                    <span class="tech-badge">CSS3</span>
+                    <span class="tech-badge">Gradients</span>
+                    <span class="tech-badge">Animations</span>
+                    <span class="tech-badge">Responsive</span>
                 </div>
             </a>
         </div>
