feat: add Amazon product link to project switcher in birthday gift and web action hero pages

--- a/web-action-hero/index.html
+++ b/web-action-hero/index.html
@@ -25,6 +25,8 @@
         <a href="../digital-business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
             <span class="divider">|</span>
             <a href="../business-card/" class="switch-link">Business Card</a>
+        <span class="divider">|</span>
+        <a href="../amazon-product/" class="switch-link">Amazon Product</a>
         </div>
 
         <header class="header">
