--- a/birthday-gift/index.html
+++ b/birthday-gift/index.html
@@ -25,6 +25,8 @@
             <a href="./" class="switch-link active">Birthday GIFt</a>
             <span class="divider">|</span>
             <a href="../business-card/" class="switch-link">Business Card</a>
+        <span class="divider">|</span>
+        <a href="../amazon-product/" class="switch-link">Amazon Product</a>
         </div>
 
         <div id="header">
