feat: update project switcher links to include Amazon product page

--- a/google-clone/index.html
+++ b/google-clone/index.html
@@ -19,9 +19,9 @@
         <span class="divider">|</span>
         <a href="../birthday-gift/" class="switch-link" title="View Birthday GIFt">🎉 Birthday GIFt</a>
         <span class="divider">|</span>
-        <a href="../digital-business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
-        <span class="divider">|</span>
         <a href="../business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
+        <span class="divider">|</span>
+        <a href="../amazon-product/" class="switch-link" title="View Amazon Product">📚 Amazon Product</a>
     </div>
 
     <!-- Header Navigation -->
