--- a/daily-dribble/index.html
+++ b/daily-dribble/index.html
@@ -17,9 +17,9 @@
         <span class="divider">|</span>
         <a href="../birthday-gift/" class="switch-link" title="View Birthday GIFt">🎉 Birthday GIFt</a>
         <span class="divider">|</span>
-        <a href="../digital-business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
-        <span class="divider">|</span>
         <a href="../business-card/" class="switch-link" title="View Business Card">💼 Business Card</a>
+        <span class="divider">|</span>
+        <a href="../amazon-product/" class="switch-link" title="View Amazon Product">📚 Amazon Product</a>
     </div>
 
     <h1>THE DAILY DRIBBLE</h1>
