feat: add Amazon product link to 404 page and business card project switcher

--- a/404.html
+++ b/404.html
@@ -111,6 +111,7 @@
             <a href="/web-action-hero/" class="link-button">🦸‍♂️ Web Action Hero</a>
             <a href="/birthday-gift/" class="link-button">🎉 Birthday GIFt</a>
             <a href="/business-card/" class="link-button">💼 Business Card</a>
+            <a href="/amazon-product/" class="link-button">📚 Amazon Product</a>
         </div>
     </div>
 </body>
