--- a/business-card/index.html
+++ b/business-card/index.html
@@ -25,6 +25,8 @@
             <a href="../birthday-gift/" class="switch-link">Birthday GIFt</a>
             <span class="divider">|</span>
             <a href="./" class="switch-link active">Business Card</a>
+            <span class="divider">|</span>
+            <a href="../amazon-product/" class="switch-link">Amazon Product</a>
         </div>
 
         <div class="container">
