feat: add project images to Web Action Hero and Birthday GIFt Site cards

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
             <a href="web-action-hero/" class="project-card">
                 <div class="project-thumbnail">
-                    <span class="project-icon">🦸‍♂️</span>
+                    <img src="web-action-hero/images/faded-office.png" alt="Office background" class="thumbnail-img">
                 </div>
                 <h2>Web Action Hero</h2>
                 <p>A stunning hero section for Dave's Devs & Designers featuring an immersive background, gradient overlays, and a compelling call-to-action.</p>
@@ -207,7 +207,7 @@
 
             <a href="birthday-gift/" class="project-card">
                 <div class="project-thumbnail">
-                    <span class="project-icon">🎉</span>
+                    <img src="birthday-gift/images/gift-cover.jpg" alt="Birthday gift" class="thumbnail-img">
                 </div>
                 <h2>Birthday GIFt Site</h2>
                 <p>An interactive birthday card with animated GIFs that reveal on hover. Fun, colorful, and built with custom fonts and smooth animations.</p>
