Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
             <a href="web-action-hero/" class="project-card">
                 <div class="project-thumbnail">
-                    <img src="web-action-hero/images/faded-office.png" alt="Office background" class="thumbnail-img">
+                    <img src="hero-team.jpg" alt="Team collaboration" class="thumbnail-img">
                 </div>
                 <h2>Web Action Hero</h2>
                 <p>A stunning hero section for Dave's Devs & Designers featuring an immersive background, gradient overlays, and a compelling call-to-action.</p>
@@ -222,7 +222,7 @@
 
             <a href="business-card/" class="project-card">
                 <div class="project-thumbnail">
-                    <img src="developer-workspace.jpg" alt="Developer workspace" class="thumbnail-img">
+                    <img src="business-card.jpg" alt="Business card" class="thumbnail-img">
                 </div>
                 <h2>Digital Business Card</h2>
                 <p>A modern, interactive business card showcasing skills, location, and contact info with stunning gradients, animations, and glassmorphism effects.</p>
@@ -237,7 +237,7 @@
 
             <a href="amazon-product/" class="project-card">
                 <div class="project-thumbnail">
-                    <img src="cat-book.jpg" alt="Cat book" class="thumbnail-img">
+                    <img src="books-shopping.jpg" alt="Books and shopping" class="thumbnail-img">
                 </div>
                 <h2>Amazon Product Page</h2>
                 <p>A fully-featured product page design with ratings, badges, gradient accents, and modern e-commerce UI patterns for a cat safety book.</p>
